# sponsorblock-mirror

./: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  Dockerfile.ci  README.md  Rocket.toml  docker-compose.yml  renovate.json
.github/workflows/: build-docker.yml  build.yml
migrations/2022-10-21-181413_create_sponsor_times/: down.sql  up.sql
migrations/2022-10-21-184904_create_sponsor_times_indexes/: down.sql  up.sql
migrations/2022-10-30-175428_create_video_id_index/: down.sql  up.sql
src/: main.rs  models.rs  routes.rs  schema.rs  structs.rs
