[package]
edition = "2021"
name = "sponsorblock-mirror"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = {version = "2.3.1", features = ["postgres"]}
diesel_migrations = "2.3.0"
lazy_static = "1.5.0"
num_cpus = "1.17.0"
once_cell = "1.21.3"
regex = "1.11.2"
reqwest = {version = "0.12.23", features = ["json", "rustls-tls", "gzip", "brotli"], default-features = false}
rocket = {git = "https://github.com/SergioBenitez/Rocket"}
rocket_sync_db_pools = {git = "https://github.com/SergioBenitez/Rocket", features = ["diesel_postgres_pool"]}
serde = {version = "1.0.221", features = ["derive"]}
serde_json = "1.0.145"
tokio = {version = "1.47.1", features = ["full"]}
