[package]
edition = "2021"
name = "sponsorblock-mirror"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = {version = "2.3.8", features = ["postgres"]}
diesel_migrations = "2.3.2"
lazy_static = "1.5.0"
num_cpus = "1.17.0"
once_cell = "1.21.4"
regex = "1.12.3"
reqwest = {version = "0.12.28", features = ["json", "rustls-tls", "gzip", "brotli"], default-features = false}
rocket = {git = "https://github.com/SergioBenitez/Rocket"}
rocket_sync_db_pools = {git = "https://github.com/SergioBenitez/Rocket", features = ["diesel_postgres_pool"]}
serde = {version = "1.0.228", features = ["derive"]}
serde_json = "1.0.149"
tokio = {version = "1.52.1", features = ["full"]}
